# Qt-custom-plot

./: CMakeLists.txt  README.md  compile_debug.bat  mainwindow.cpp  mainwindow.h  mainwindow.ui
